[package]
name = "onshape-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
reqwest = { version = "0.12.18" }
onshape_rust = { path = "../onshape-rust/"}
tokio = { version = "1", features = ["full"] }
url = "2.5.4"
futures = "0.3.31"
itertools = "0.14.0"
